2008-10-27  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c (igraph_strength) : added

	* src/structural_properties.c 
	(igraph_avg_nearest_neighbor_degree) : added

2008-10-24  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c (igraph_shortest_paths_johnson) : added

2008-10-01  Gabor Csardi  <csardi@szaffi>

	* src/blicc.cc (igraph_automorphisms) : fixed a memory leak

2008-09-29  Gabor Csardi  <csardi@szaffi>

	* src/spectral_properties.c (igraph_laplacian) : added 'weights' 
	argument

	* src/type_indexededgelist.c (igraph_get_eids) : rewritten to
	use binary search. In practice it is faster only if we search 
	for adjacent edges of high-degree vertices frequently
	* examples/simple/igraph_get_eids.c : added

2008-09-26  Gabor Csardi  <csardi@szaffi>

	* src/basic_query.c (igraph_are_connected) : speeded up by using 
	the new igraph_get_eid2

	* src/type_indexededgelist.c (igraph_get_eid2) : added, 
	the same as igraph_get_eid, but does not fail if the edge
	is not in the graph; instead it returns a negative value in eid

2008-09-11  Gabor Csardi  <csardi@szaffi>

	* src/gengraph_mr-connected.cpp (igraph_degree_sequence_game_vl) :
	check that the sum of degree is even

2008-08-22  Gabor Csardi  <csardi@szaffi>

	* src/decomposition.c (igraph_is_chordal) : added
	* src/decomposition.c (igraph_maximum_cardinality_search) : 
	API update, optionally it calculates the inverse of alpha

2008-08-20  Gabor Csardi  <csardi@szaffi>

	* src/decomposition.c (igraph_maximum_cardinality_search) : added

2008-07-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_get_eid) : simplification,
	in the end the newly defined macros will be used by other
	functions as well

2008-07-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/centrality.c (igraph_betweenness_estimate_weighted) : 
	handle the 'vids' argument properly

	* src/centrality.c (igraph_betweenness_estimate_weighted) : 
	added support for cutoff
